fix dark mode

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -113,7 +113,7 @@ button, svg {
 }
 
 :root[data-theme="dark"] {
-  --primary-background-color: #151111;
+  --primary-background-color: #0e0c0c;
   --secondary-background-color: #1E2228;
 
   --white-color: #1E2228;
